--- a/bdc.html
+++ b/bdc.html
@@ -54,7 +54,7 @@
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-analytics.js";
-        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, onAuthStateChanged, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
         import { getDatabase, ref, push, set, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
         // Your web app's Firebase configuration
@@ -398,6 +398,27 @@
                     .catch((error) => {
                         const errorMessage = error.message;
                         showModalMessage(successModal, `Login failed: ${errorMessage}`, 'Login Failed');
+                    });
+            });
+            
+            // Forgot Password handler
+            const forgotPasswordLink = document.getElementById('forgot-password-link');
+            forgotPasswordLink?.addEventListener('click', (ev) => {
+                ev.preventDefault();
+                const emailInput = document.getElementById('login-email');
+                const email = emailInput?.value?.trim();
+                if (!email) {
+                    showModalMessage(successModal, 'Please enter your email to reset the password.', 'Email Required');
+                    return;
+                }
+                sendPasswordResetEmail(auth, email)
+                    .then(() => {
+                        showModalMessage(successModal, `A password reset link has been sent to ${email}. Please check your inbox.`, 'Password Reset Sent');
+                        closeModal(loginModal);
+                    })
+                    .catch((error) => {
+                        const errorMessage = error.message;
+                        showModalMessage(successModal, `Failed to send reset email: ${errorMessage}`, 'Password Reset Error');
                     });
             });
 
@@ -918,9 +939,18 @@
                     <label for="login-password" class="block text-sm text-gray-600 mb-1">Password</label>
                     <input id="login-password" type="password" required class="w-full rounded-lg border p-3" />
                 </div>
-                <div class="text-right">
-                    <button type="submit" class="bg-red-600 text-white px-4 py-2 rounded">Sign in</button>
-                    <button id="login-cancel" type="button" class="ml-2 border px-4 py-2 rounded">Cancel</button>
+                <div class="flex items-center justify-end gap-4 mt-2">
+                    <div class="flex gap-2 items-center">
+                        <button type="submit"
+                            class="bg-red-600 text-white px-4 py-2 rounded font-semibold shadow hover:bg-red-700 transition">Sign
+                            in</button>
+                        <button id="login-cancel" type="button"
+                            class="border border-gray-300 text-gray-700 px-4 py-2 rounded font-semibold shadow hover:bg-gray-100 transition">Cancel</button>
+                    </div>
+                    <a id="forgot-password-link" href="#"
+                        class="text-xs text-red-700 hover:underline hover:text-red-900 transition-colors duration-200">
+                        Forgot Password?
+                    </a>
                 </div>
             </form>
         </div>
@@ -937,7 +967,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
                     </svg>
                 </button>
-            </div>    
+            </div>
             <form id="profile-form" class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <!-- Full Name -->
                 <div class="relative">
