--- a/bdc.html
+++ b/bdc.html
@@ -111,15 +111,13 @@
         // Render donor card for public view (hides contact info)
         function renderDonorCardPublic(d) {
             const lastDate = d.lastDonateDate ? new Date(d.lastDonateDate).toLocaleDateString() : '—';
-            const publicComment = d.publicComment ? `<p class="mt-2 text-gray-700">${d.publicComment}</p>` : '';
+            const publicComment = d.publicComment ? `<span class="text-red-700 font-semibold">${d.publicComment}</span>` : '';
             const contactInfo = d.isPhoneHidden ? 
-                `<div class="mt-2 text-xs text-gray-500">${publicComment}</div>` : 
-                `<div class="mt-2 text-xs text-gray-500">
-                    <a href="tel:${d.phone}" class="flex items-center text-xs text-gray-500 hover:text-red-700 transition">
-                        <svg class="w-4 h-4 mr-1 text-red-500" fill="currentColor" viewBox="0 0 24 24"><path d="M3 5a2 2 0 012-2h2.5a1 1 0 01.95.684l1 3a1 1 0 01-.217.982L7.5 10.5a11 11 0 005 5l2.834-2.834a1 1 0 01.982-.217l3 1A1 1 0 0121 16.5V19a2 2 0 01-2 2H17c-8.284 0-15-6.716-15-15V5z"/></svg>
-                        <span>${d.phone}</span>
-                    </a>
-                </div>`;
+                `<span>${publicComment}</span>` : 
+                `<a href="tel:${d.phone}" class="flex items-center text-xs text-gray-500 hover:text-red-700 transition">
+                    <svg class="w-4 h-4 mr-1 text-red-500" fill="currentColor" viewBox="0 0 24 24"><path d="M3 5a2 2 0 012-2h2.5a1 1 0 01.95.684l1 3a1 1 0 01-.217.982L7.5 10.5a11 11 0 005 5l2.834-2.834a1 1 0 01.982-.217l3 1A1 1 0 0121 16.5V19a2 2 0 01-2 2H17c-8.284 0-15-6.716-15-15V5z"/></svg>
+                    <span>${d.phone}</span>
+                </a>`;
             return `
                 <div class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-200 flex flex-col sm:flex-row sm:items-center justify-between">
                     <div class="flex-1 min-w-0 mb-2 sm:mb-0">
@@ -131,10 +129,10 @@
                             <span class="font-bold">Current Location:</span> <span>${d.location || '—'}</span>
                         </div>
                     </div>
-                    <div class="flex-shrink-0 flex items-center space-x-4">
-                        <div class="text-xs text-gray-500">Last Donated: ${lastDate}</div>
+                    <div class="flex-shrink-0 flex flex-col items-end space-y-1 text-xs text-gray-500">
+                        <span class="font-bold">Last Donated:</span> <span>${lastDate}</span>
+                        ${contactInfo}
                     </div>
-                    ${contactInfo}
                 </div>
             `;
         }
