--- a/bdc.html
+++ b/bdc.html
@@ -111,9 +111,8 @@
         // Render donor card for public view (hides contact info)
         function renderDonorCardPublic(d) {
             const lastDate = d.lastDonateDate ? new Date(d.lastDonateDate).toLocaleDateString() : '—';
-            const publicComment = d.publicComment ? `<span class="text-red-700 font-semibold">${d.publicComment}</span>` : '';
-            const contactInfo = d.isPhoneHidden ? 
-                `<span class="flex-shrink-0">${publicComment}</span>` : 
+            const contactElement = d.isPhoneHidden ? 
+                `<a href="#contact" class="text-red-700 font-semibold hover:text-red-900 transition-colors duration-200">${d.publicComment || 'Contact Admin'}</a>` :
                 `<a href="tel:${d.phone}" class="flex items-center flex-shrink-0 text-xs text-gray-500 hover:text-red-700 transition">
                     <svg class="w-4 h-4 mr-1 text-red-500" fill="currentColor" viewBox="0 0 24 24"><path d="M3 5a2 2 0 012-2h2.5a1 1 0 01.95.684l1 3a1 1 0 01-.217.982L7.5 10.5a11 11 0 005 5l2.834-2.834a1 1 0 01.982-.217l3 1A1 1 0 0121 16.5V19a2 2 0 01-2 2H17c-8.284 0-15-6.716-15-15V5z"/></svg>
                     <span>${d.phone}</span>
@@ -133,7 +132,7 @@
                         <div class="flex items-center space-x-1">
                             <span class="font-bold">Last Donated:</span>&nbsp;<span>${lastDate}</span>
                         </div>
-                        ${contactInfo}
+                        ${contactElement}
                     </div>
                 </div>
             `;
@@ -195,6 +194,9 @@
                         document.getElementById('admin-member-lastDonateDate').value = memberData.lastDonateDate || '';
                         document.getElementById('admin-member-hide-phone').checked = memberData.isPhoneHidden || false;
                         document.getElementById('admin-member-comment').value = memberData.publicComment || '';
+
+                        // Smoothly navigate to the form
+                        document.getElementById('admin-member-form').scrollIntoView({ behavior: 'smooth' });
                     }
                 });
             });
