--- a/bdc.html
+++ b/bdc.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2k4t1tqL/wO1g4pDq9n+Ww/7A/l5e/Vq3Lw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -128,7 +129,7 @@
                             <span class="font-bold">Current Location:</span> <span>${d.location || '—'}</span>
                         </div>
                     </div>
-                    <div class="flex-shrink-0 flex items-center justify-end space-x-2 text-xs text-gray-500">
+                    <div class="flex-shrink-0 flex items-center justify-end space-x-2 text-xs text-gray-500 mt-2 sm:mt-0 whitespace-nowrap">
                         <div class="flex items-center space-x-1">
                             <span class="font-bold">Last Donated:</span>&nbsp;<span>${lastDate}</span>
                         </div>
@@ -1222,6 +1223,14 @@
     <footer class="mt-12 bg-gray-900 text-gray-200 py-6">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <br>© 2025 Life is Beautiful 💜</br>
+            <div class="flex justify-center gap-4 mt-2">
+                <a href="https://github.com/MueidShahriar" target="_blank" rel="noopener noreferrer" class="text-gray-200 hover:text-red-500 transition-colors">
+                    <i class="fab fa-github fa-lg"></i>
+                </a>
+                <a href="https://www.facebook.com/mueid016" target="_blank" rel="noopener noreferrer" class="text-gray-200 hover:text-red-500 transition-colors">
+                    <i class="fab fa-facebook fa-lg"></i>
+                </a>
+            </div>
             <br>Developed by Md. Mueid Shahriar </br>
             CSE, BAUET
         </div>
