--- a/bdc.html
+++ b/bdc.html
@@ -288,6 +288,11 @@
             if (currentUserRole === 'admin') {
                 renderAdminMembersList();
             }
+            // Update donor count on UI
+            const donorCountEl = document.getElementById('donor-count');
+            if (donorCountEl) {
+                donorCountEl.textContent = donorsList.length;
+            }
         }, (error) => {
             console.error("Failed to load donors: ", error);
         });
@@ -922,15 +927,15 @@
             <div class="mt-8 bg-white rounded-lg shadow p-6 flex flex-col md:flex-row items-center justify-between gap-6">
                 <div class="flex flex-col sm:flex-row items-center gap-6 w-full md:w-auto">
                     <div class="text-center">
-                        <div class="text-3xl font-extrabold text-red-700">1,254</div>
+                        <div id="donor-count" class="text-3xl font-extrabold text-red-700">0</div>
                         <div class="text-sm text-gray-600">Registered Donors</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-3xl font-extrabold text-red-700">842</div>
+                        <div class="text-3xl font-extrabold text-red-700">10</div>
                         <div class="text-sm text-gray-600">Lives Helped</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-3xl font-extrabold text-red-700">28</div>
+                        <div class="text-3xl font-extrabold text-red-700">10</div>
                         <div class="text-sm text-gray-600">Events This Year</div>
                     </div>
                 </div>
