--- a/bdc.html
+++ b/bdc.html
@@ -336,11 +336,10 @@
                             <ul class="mt-4 list-none p-0 space-y-1 text-gray-600">
                                 <li><span class="font-bold">Blood Group:</span> ${d.bloodGroup}</li>
                                 <li><span class="font-bold">Location:</span> ${d.location}</li>
-                                <li><span class="font-bold">Department:</span> ${d.department || '—'}</li>
-                                <li><span class="font-bold">Batch:</span> ${d.batch || '—'}</li>
-                                <li><span class="font-bold">ID No.:</span> ${d.idNo || '—'}</li>
-                                <li><span class="font-bold">Age:</span> ${d.age || '—'}</li>
-                                <li><span class="font-bold">Weight:</span> ${d.weight ? d.weight + ' kg' : '—'}</li>
+                                <li><span class="font-bold">Department:</span> ${d.department || '-'}</li>
+                                <li><span class="font-bold">Batch:</span> ${d.batch || '-'}</li>
+                                <li><span class="font-bold">Age:</span> ${d.age || '-'}</li>
+                                <li><span class="font-bold">Weight:</span> ${d.weight ? d.weight + ' kg' : '-'}</li>
                             </ul>
                         </div>
                     </div>
@@ -815,7 +814,6 @@
                         location: fd.get('donor-location'),
                         department: fd.get('donor-department'),
                         batch: fd.get('donor-batch'),
-                        idNo: fd.get('donor-id'),
                         age: fd.get('donor-age'),
                         weight: fd.get('donor-weight'),
                         date: fd.get('donation-date')
@@ -1352,10 +1350,6 @@
                         <div class="flex flex-col">
                             <label for="donor-batch" class="text-sm font-medium text-red-700 mb-1">Batch</label>
                             <input name="donor-batch" id="donor-batch" type="text" class="block w-full rounded-lg border-2 border-gray-100 bg-white p-3 text-gray-900 shadow-sm focus:border-red-300 focus:outline-none" />
-                        </div>
-                        <div class="flex flex-col">
-                            <label for="donor-id" class="text-sm font-medium text-red-700 mb-1">ID No.</label>
-                            <input name="donor-id" id="donor-id" type="text" class="block w-full rounded-lg border-2 border-gray-100 bg-white p-3 text-gray-900 shadow-sm focus:border-red-300 focus:outline-none" />
                         </div>
                         <div class="flex flex-col">
                             <label for="donor-age" class="text-sm font-medium text-red-700 mb-1">Age</label>
