--- a/bdc.html
+++ b/bdc.html
@@ -48,19 +48,18 @@
             animation: bounce-slow 4s ease-in-out infinite;
         }
 
-        /* Custom styles for Bootstrap Carousel to match Tailwind theme */
         #recentDonorCarousel .carousel-control-prev-icon,
         #recentDonorCarousel .carousel-control-next-icon {
-            background-color: rgba(239, 68, 68, 0.7); /* red-500 with opacity */
+            background-color: rgba(239, 68, 68, 0.7); 
             border-radius: 50%;
-            padding: 1.5rem; /* Make the background larger */
+            padding: 1.5rem; 
             background-size: 50% 50%;
         }
         #recentDonorCarousel .carousel-indicators li {
-            background-color: #fca5a5; /* red-300 */
+            background-color: #fca5a5; 
         }
         #recentDonorCarousel .carousel-indicators .active {
-            background-color: #ef4444; /* red-500 */
+            background-color: #ef4444; 
         }
     </style>
     <meta name="description" content="Community-driven blood donation platform. Register as a donor, search donors by blood group and location.">
@@ -897,7 +896,7 @@
                     lastDonateDate: fd.get('lastDonateDate')?.toString() || '',
                     notes: fd.get('notes')?.toString() || '',
                     email: currentUser.email,
-                    role: fd.get('role')?.toString().trim() // Admin can change roles here, but security rules prevent this for members
+                    role: fd.get('role')?.toString().trim() 
                 };
 
                 const userRef = ref(database, 'donors/' + currentUser.uid);
@@ -934,8 +933,6 @@
                 const user = auth.currentUser;
                 const donorRef = ref(database, 'donors/' + user.uid);
 
-                // An admin can delete their own account from the profile modal, but cannot delete others
-                // This is a security feature of Firebase Auth
                 if (user && user.uid === user.uid) {
                     remove(donorRef)
                         .then(() => {
@@ -1003,8 +1000,8 @@
         </div>
     </header>
 
-    <main class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
-        <section class="relative flex flex-col md:flex-row items-center justify-between py-20 gap-10">
+    <main class="max-w-6xl mx-auto px-4 sm:px-4 lg:px-6">
+        <section class="relative flex flex-col md:flex-row items-center justify-between py-12 gap-6">
             <div class="flex-1 flex flex-col items-center justify-center text-center md:items-start md:text-left">
                 <h1 class="text-4xl sm:text-5xl font-extrabold text-red-700 mb-4 tracking-tight break-words leading-tight">
                     Donate Blood Save Life
