--- a/bdc.html
+++ b/bdc.html
@@ -944,7 +944,7 @@
             const backToTopBtn = document.getElementById('back-to-top');
 
             window.addEventListener('scroll', () => {
-                if (window.scrollY > 300) { // Show the button after scrolling 300px
+                if (window.scrollY > 300) { 
                     backToTopBtn.classList.add('show');
                 } else {
                     backToTopBtn.classList.remove('show');
@@ -964,7 +964,7 @@
     <header class="sticky top-0 z-40 bg-white/90 backdrop-blur shadow-lg rounded-b-xl">
         <nav class="max-w-6xl mx-auto flex items-center justify-between px-4 py-2">
             <div class="flex items-center gap-3">
-                <img src="image/blood-drop.png" alt="logo" class="h-10 w-10 rounded-full border-2 border-red-600 shadow" />
+                <img src="image/blood-drop.png" alt="logo" class="h-10 w-10 border-red-600" />
                 <span class="text-2xl font-extrabold text-red-700 tracking-tight">Blood Donation Community</span>
             </div>
             <div class="hidden md:flex items-center gap-1 text-base font-medium">
@@ -1022,11 +1022,9 @@
 
         <section id="recent-donor" class="py-12">
             <div id="recentDonorCarousel" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <!-- Indicators will be generated here -->
+                <ol class="carousel-indicators">                
                 </ol>
-                <div class="carousel-inner">
-                    <!-- Carousel items will be generated here -->
+                <div class="carousel-inner">                 
                 </div>
                 <a class="carousel-control-prev" href="#recentDonorCarousel" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -1147,7 +1145,6 @@
             <p class="mt-2 text-gray-600">Join our community drives and help save lives - see the event details and register
                 to participate.</p>
             <div id="public-events-list" class="mt-6 grid md:grid-cols-2 gap-6">
-                <!-- Events will be dynamically loaded here from the database -->
             </div>
         </section>
 
@@ -1588,7 +1585,7 @@
     </div>
 
     <div class="fixed bottom-4 right-4 z-40 flex flex-col items-end gap-2 sm:bottom-4 sm:right-4 md:bottom-4 md:right-4">
-        <a href="#" id="back-to-top" class="bg-red-700 text-white w-12 h-12 rounded-full shadow-lg hover:bg-red-600 transition-all text-lg flex items-center justify-center">
+        <a href="#" id="back-to-top" class="bg-red-600 text-white w-12 h-12 rounded-full shadow-lg hover:bg-red-700 transition-all text-lg flex items-center justify-center">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M5 10l7-7m0 0l7 7m-7-7v18" />
             </svg>
